# portfolio

./: README.md  index.html
BotHelper/: config.py  handlers.py  keyboards.py  main.py  messages.py  myutils.py
IVMiMG/CR/: Untitled.ipynb
IVMiMG/CR/CR/: COO_2_CSR.cpp  COO_2_CSR.h  CRSArrays.hpp  C_matrix.cpp  Source.cpp  Support_functions.cpp  Support_functions.h
IVMiMG/PyBindTest/: main.py
IVMiMG/parser/: make_portrait.py  one_to_zero.ipynb  pars+order+norm.ipynb  parser(bad-mtx).ipynb
IVMiMG/stoks/: CTPrecond.ipynb
SPAI/: SPAI_func.cpp  SPAI_func.h  main.cpp
SPAI/SystemSolver/: Sparse_alpha.cpp  Sparse_alpha.h
Scopus_api_test/: APIKey.txt  aff.txt  config.py  data_file.json  doi.txt  keys.txt  main.py  test.py  through_requests.py
inmost_stokes_par_mg_new/: CMakeLists.txt  check_petsc_matrix.py  config.ini  readme.md
inmost_stokes_par_mg_new/src/: Aup_SPAI.hpp  Aup_diag.hpp  Aup_multigrid.hpp  Aup_multigrid_sequence.hpp  Aup_multigrid_sequence_prec_Aff.hpp  CMakeLists.txt  Notay_transform.cpp  Notay_transform.hpp  Notay_transform_test.cpp  Notay_transform_test.hpp  SPAI_api.cpp  SPAI_api.hpp  SPAI_prolongation.cpp  SPAI_prolongation.hpp  Sparse_alpha.cpp  Sparse_alpha.hpp  boundary_conditions.cpp  boundary_conditions.hpp  bounding_box.cpp  bounding_box.hpp  common.cpp  common.hpp  convergence_tests.cpp  convergence_tests.hpp  decompose_matrix.cpp  decompose_matrix.hpp  dimensions.cpp  dimensions.hpp  interp_prolong_distance_scaled.cpp  interp_prolong_distance_scaled.hpp  main.cpp  make_adjacent.cpp  make_adjacent.hpp  make_ids.cpp  make_ids.hpp  mark_mesh.cpp  mark_mesh.hpp  matrix_generation.cpp  matrix_generation.hpp  mesh_coarsen.cpp  (+42 more)
laplace_armadillo/: CMakeLists.txt
laplace_armadillo/src/: CMakeLists.txt  compensations.h  main_laplace.cpp  preconditioners.h  solvers.h  test_speed.h  unsorted.cpp  unsorted.hpp
